--- a/features/projects/components/project-list/project-list.module.scss
+++ b/features/projects/components/project-list/project-list.module.scss
@@ -1,5 +1,7 @@
 @use "@styles/breakpoint";
 @use "@styles/space";
+@use "@styles/color";
+@use "@styles/font";
 
 .list {
   display: grid;
@@ -14,4 +16,34 @@
   @media (min-width: breakpoint.$desktop) {
     grid-template-columns: repeat(auto-fit, 400px);
   }
+}
+
+.error {
+  display: flex;
+  justify-content: space-between;
+  border-radius: 8px;
+  border: 1px solid color.$error-300;
+  background: color.$error-25;
+  padding: 16px;
+  color: color.$error-700;
+  font: font.$text-sm-medium;
+
+  div {
+    display: flex;
+    gap: 12px;
+  }
+}
+
+.refetch-button {
+  background-color: transparent;
+  border-width: 0;
+  font-family: inherit;
+  font-size: inherit;
+  font-style: inherit;
+  font-weight: inherit;
+  line-height: inherit;
+  padding: 0;
+  display: flex;
+  gap: 8px;
+  color: color.$error-700;
 }
