--- a/styles/font.scss
+++ b/styles/font.scss
@@ -29,6 +29,9 @@ $text-md-medium:
 $text-md-semibold:
   600 1rem/1.5rem inter,
   sans-serif;
+$text-lg-medium:
+  500 1.125rem/1.75rem inter,
+  sans-serif;
 
 /* Display */
 $display-sm-regular:
