--- a/styles/font.scss
+++ b/styles/font.scss
@@ -29,10 +29,18 @@ $text-md-medium:
 $text-md-semibold:
   600 1rem/1.5rem inter,
   sans-serif;
+$text-lg-normal:
+  400 1.125rem/1.75rem inter,
+  sans-serif;
 $text-lg-medium:
   500 1.125rem/1.75rem inter,
   sans-serif;
-
+$text-xl-medium:
+  500 1.5rem/2rem inter,
+  sans-serif;
+$text-2xl-semibold:
+  600 3.75rem/4.5rem inter,
+  sans-serif;
 /* Display */
 $display-sm-regular:
   400 1.875rem/2.375rem inter,
