--- a/features/ui/ui-kit-select/select.module.scss
+++ b/features/ui/ui-kit-select/select.module.scss
@@ -72,6 +72,10 @@
     margin: 0;
     z-index: 10;
 
+    .placeholder {
+      color: color.$gray-400;
+    }
+
     li {
       padding: 10px 14px;
       cursor: pointer;
