--- a/features/landing/components/hero/hero.module.scss
+++ b/features/landing/components/hero/hero.module.scss
@@ -21,6 +21,12 @@
 
   @media (width >= 768px) {
     padding: 64px;
+
+    img {
+      width: 100%;
+      height: auto;
+      max-width: 768px;
+    }
   }
 }
 
