--- a/features/issues/components/issue-list/issue-row.module.scss
+++ b/features/issues/components/issue-list/issue-row.module.scss
@@ -45,6 +45,14 @@
   }
 }
 
+.graph {
+  @media (width >= 1024px) and (width <= 1200px) {
+    .graphchild {
+      width: 100%;
+    }
+  }
+}
+
 .issueCell {
   composes: cell;
   display: flex;
